# ezsp-fwupd

./: Cargo.toml  README.md
.cargo/: config.toml  deny.toml
.github/workflows/: rust.yaml
auto-updater/: Cargo.toml
auto-updater/src/: args.rs  constants.rs  current_version.rs  direction.rs  load_ota_file.rs  main.rs  make_uart.rs  manifest.rs  resettable_uart.rs  uart_params.rs  update_firmware.rs  validate_firmware.rs  validate_ota_file.rs
auto_updater/: Cargo.toml
auto_updater/src/: args.rs  current_version.rs  direction.rs  get_current_version.rs  main.rs  manifest.rs
auto_updater/src/manifest/: metadata.rs
cli/: Cargo.toml
cli/src/: main.rs
ezsp-fwupd/: Cargo.toml
ezsp-fwupd/src/: discard_callbacks.rs  fwupd.rs  launch_bootloader.rs  lib.rs  make_uart.rs  ota_file.rs  xmodem.rs
ezsp-fwupd/src/fwupd/: prepare_bootloader.rs  reset.rs  transmit.rs
ezsp-fwupd/src/ota_file/: header.rs  tag.rs  upgrade_file_destination.rs
ezsp-fwupd/src/ota_file/header/: field_control.rs
ezsp-fwupd/src/xmodem/: frame.rs  send.rs
ezsp-fwupd/src/xmodem/send/: send_frame.rs
ezsp_fwupd/: Cargo.toml
ezsp_fwupd/src/: clear_buffer.rs  flash_progress.rs  fwupd.rs  ignore_timeout.rs  lib.rs  ota_file.rs  version_from_filename.rs  xmodem.rs
ezsp_fwupd/src/fwupd/: prepare_bootloader.rs  transmit.rs  tty.rs
ezsp_fwupd/src/ota_file/: header.rs  tag.rs
ezsp_fwupd/src/ota_file/header/: field_control.rs
ezsp_fwupd/src/xmodem/: frame_count.rs  send.rs
src/: fill.rs  firmware_updater.rs  fwupd.rs  lib.rs  main.rs  ota_file.rs  silabs.rs  silabs2.rs
src/fwupd/: clear_buffer.rs  prepare_bootloader.rs  reset.rs  transmit.rs  tty.rs  xmodem.rs
src/fwupd/xmodem/: frame.rs  frames.rs  send.rs
src/ota_file/: header.rs  tag.rs  upgrade_file_destination.rs
src/ota_file/header/: field_control.rs
src/silabs/: ctrl_c.rs  ctrl_c_and_wait_with_output.rs  manifest.rs  z3gateway_host.rs
src/silabs2/: xmodem.rs  xmodem_frames.rs
src/xmodem/: frame.rs  frames.rs  send.rs
src/xmodem/send/: send_frame.rs
supply-chain/: config.toml
