[package]
name = "auto_updater"
version = "0.1.0"
edition = "2024"

[dependencies]
ashv2 = { version = "1.0" }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
ezsp = { version = "1.0", features = ["semver"] }
ezsp-fwupd = { path = "../ezsp_fwupd" }
le-stream = { version = "2", features = ["derive"] }
log = "0.4"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.7"
tokio = { version = "1.46", features = ["macros", "rt", "rt-multi-thread"] }

[[bin]]
name = "ezsp-auto-fwupd"
path = "src/main.rs"

[lints]
workspace = true
