[package]
name = "cli"
version = "0.1.0"
description = "Firmware update utility for EZSP-based Zigbee devices"
license = "MIT"
edition = "2024"

[dependencies]
ashv2 = { version = "1.2", features = ["serialport"] }
clap = { version = "4.5.40", features = ["derive"] }
env_logger = "0.11.8"
ezsp = { version = "1.2", features = ["semver"] }
ezsp-fwupd = { path = "../ezsp-fwupd" }
indicatif = "0.18"
le-stream = { version = "3", features = ["derive"] }
log = "0.4"
semver = "1.0.26"
serialport = "4.7"
tokio = { version = "1.46", features = ["macros", "rt", "rt-multi-thread"] }

[[bin]]
name = "ezsp-fwupd"
path = "src/main.rs"

[lints]
workspace = true