[package]
name = "cli"
version = "0.1.0"
description = "Firmware update utility for EZSP-based Zigbee devices"
license = "MIT"
edition = "2024"
publish = false

[dependencies]
ashv2 = { version = "6.0", git = "https://github.com/PaulmannLighting/ashv2/" }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
ezsp = { version = "3.0", git = "https://github.com/PaulmannLighting/ezsp/", features = ["ashv2", "semver"] }
ezsp-fwupd = { path = "../ezsp-fwupd" }
indicatif = "0.18"
le-stream = { version = "6", features = ["derive"] }
log = "0.4"
semver = "1.0"
serialport = "4.8"
tokio = { version = "1.49", features = ["macros", "rt", "rt-multi-thread"] }

[[bin]]
name = "ezsp-fwupd"
path = "src/main.rs"

[lints]
workspace = true