[package]
name = "ezsp-fwupd"
version = "1.0.0"
description = "Firmware update library for EZSP-based Zigbee devices"
license = "MIT"
edition = "2024"
publish = false

[dependencies]
ashv2 = "1.2"
bitflags = "2.9"
crc = "3.3"
ezsp = { version = "1.2", features = ["ashv2"] }
indicatif = "0.18"
le-stream = { version = "5", features = ["derive"] }
log = "0.4"
serialport = "4.7"
tokio = { version = "1.48", features = ["sync"] }

[lints]
workspace = true
