[package]
name = "ezsp-fwupd"
version = "1.0.0"
description = "Firmware update library for EZSP-based Zigbee devices"
license = "MIT"
edition = "2024"
publish = false

[dependencies]
ashv2 = { path = "../../ashv2" }
bitflags = "2.11"
crc = "3.3"
ezsp = { path = "../../ezsp", features = ["ashv2"] }
indicatif = "0.18"
le-stream = { version = "6", features = ["derive", "macaddr"] }
log = "0.4"
serialport = "4.8"
tokio = { version = "1.49", features = ["sync"] }

[lints]
workspace = true
