[package]
name = "ezsp-fwupd"
version = "1.0.0"
edition = "2024"

[dependencies]
ashv2 = "1.2"
bitflags = "2.9"
crc = "3.3"
ezsp = { version = "1.2", features = ["ashv2"] }
indicatif = "0.18"
le-stream = { version = "2", features = ["derive"] }
log = "0.4"
serialport = "4.7"
tokio = { version = "1.46", features = ["sync"] }

[lints]
workspace = true
